--- a/clients/src/App.scss
+++ b/clients/src/App.scss
@@ -15,6 +15,9 @@ button {
 }
 
 .app {
+  &__body{
+    margin-top:80px;
+  }
   background-color: $app-bg-color;
   align-items: center;
   text-align: center;
