--- a/clients/src/components/common/login/Login.scss
+++ b/clients/src/components/common/login/Login.scss
@@ -8,7 +8,7 @@
     width: 920px;
     border-radius: 30px;
 }
-h1{
+form__title{
     text-align: center;
     padding-top: 40px;
     font-family: var(--logo-font);
@@ -20,52 +20,42 @@ h1{
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    margin: 5px 10%;
+    margin: -15px 10%;
 }
 .info__area{
     display: block;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    margin: auto 10px auto 10%;
+    margin: -50px 10px 0 10%;
+    .nav__btn__login{
+        padding: 5px 30px;
+    }
 }
 
-img {
-    max-width: 600px;
-    vertical-align: center;
+.auth__pic {
+    max-width: 500px;
 }
 input{
-    padding-left: 20px;
-    margin: 5px 0;
+    padding: 10px 20px;
+    margin: 10px;
     display: block;
     border-radius: 50px;
     width: 300px;
     font-size: 1rem;
     border-radius: 50px;
-        border: 1px solid var(--mint);
-        color: var(--mint) !important;
-        background-color: var(--white);
-        font-weight:700;
-        padding: 5px;
+    border: 1px solid var(--mint);
+    color: var(--mint);
+    background-color: var(--white);
+    font-weight:700;
     ::placeholder{
-        border: 1px solid var(--mint) !important;
-     
+        border: 1px solid var(--mint);
     }
 }
 .button{
-    &__loginn{
-        max-width: 150px;
-        border-radius: 50px;
-        border: 1px solid var(--mint);
-        color: var(--mint) !important;
-        background-color: var(--white);
-        font-weight:700;
-        padding: 5px 0;
-        &:hover{
-            color: var(--white);
-            background: var(--light-mint);
-        }   
+    &__login{ 
         &-gg{
+            background: none;
             border: none;
             margin: 10px auto;
             &:hover{
@@ -75,7 +65,8 @@ input{
         }     
     }
 
-    &__signupp{
+    &__signup{
+        border: 1px solid var(--mint);
         max-width: 150px;
         border-radius: 50px;
         color: var(--white);
@@ -94,9 +85,14 @@ input{
     margin: 20px;
 }
 .login__forget{
-    display: inline;    
+    display: inline; 
+    .nav__btn__signup{
+        padding: 5px 30px;
+    } 
+
 }
 .forget__button{
+    background: none;
     border: none;
     color: var(--gray);
     text-decoration: underline;
