--- a/clients/src/components/common/home/Homepage.scss
+++ b/clients/src/components/common/home/Homepage.scss
@@ -1,216 +1,213 @@
-@import '_setting.scss';
+@import "_setting.scss";
 
 h1 {
-    font-family: var(--body-font);
-    font-size: 3vw;
-    color: var(--mint) !important;
-    font-weight: var(--font-bold);
-    text-align: left;
+  font-family: var(--body-font);
+  font-size: 3vw;
+  color: var(--mint) !important;
+  font-weight: var(--font-bold);
+  text-align: left;
 }
 
-.intro{
-    text-align: left;
-    font-size: 1.3vw;
+.intro {
+  text-align: left;
+  font-size: 1.3vw;
 }
 
-.homepage{
-    width: 100%;
-    max-height: 990px;
-    background-color: var(--body-color);
-    margin-top: var(--navbar-height);
-    left: 0;
-    z-index: 0;
-    transition: .4s; // For animation dark mod
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    @media screen and (max-width: 700px){
-        grid-template-columns: repeat(1, 1fr);
-    }
+.homepage {
+  width: 100%;
+  max-height: 990px;
+  background-color: var(--body-color);
+  margin-top: var(--navbar-height);
+  left: 0;
+  z-index: 0;
+  transition: 0.4s; // For animation dark mod
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  @media screen and (max-width: 700px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 .homepage__pic {
-    max-width: 550px;
-    vertical-align: center;
+  max-width: 550px;
+  vertical-align: center;
 }
-.home__right{
-    position: relative;
-    align-content: center;  
-    margin: auto;
+.home__right {
+  position: relative;
+  align-content: center;
+  margin: auto;
 }
-.left{
-    position: relative;
-    align-content: center;
+.left {
+  position: relative;
+  align-content: center;
 }
-#about .nav__logo :hover{
-    transform: scale(1.5);
-    font-weight: 300;
-    top: var(--navbar-height);
+#about .nav__logo :hover {
+  transform: scale(1.5);
+  font-weight: 300;
+  top: var(--navbar-height);
 }
-.about{
-    margin-top: 90px;
+.about {
+  margin-top: 90px;
 }
 #create {
-    font-family: var(--logo-font);
-    font-size: var(--h1-font-size);
-    color: var(--mint);
-    font-weight: 600;
-    margin:10px;
-    
+  font-family: var(--logo-font);
+  font-size: var(--h1-font-size);
+  color: var(--mint);
+  font-weight: 600;
+  margin: 10px;
 }
-.create__pic{
-    max-height: 300px !important; 
+.create__pic {
+  max-height: 300px !important;
 }
-.test__pic{
-    max-height: 300px !important; 
+.test__pic {
+  max-height: 300px !important;
 }
-.about__contest{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding-top: .5rem;
-    @media screen and (max-width: 700px){
-        grid-template-columns: repeat(1, 1fr);
-    }
+.about__contest {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 0.5rem;
+  @media screen and (max-width: 700px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .card-info {
-    width: 400px;
-    height: 400px;
-    border-radius: 10px;
-    text-align: center;
-    border: 1px solid var(--mint);
-    overflow: hidden;
-    margin: 0 30px;
-    box-sizing: border-box;
-    padding: 0;
-    z-index: 0;
+  width: 400px;
+  height: 400px;
+  border-radius: 10px;
+  text-align: center;
+  border: 1px solid var(--mint);
+  overflow: hidden;
+  margin: 0 30px;
+  box-sizing: border-box;
+  padding: 0;
+  z-index: 0;
 }
 .card__img {
-    width: 120px;
-    height: 120px;
-    overflow: hidden;
-    transition: 0.25s;
-    margin: 0 auto;
-    transform: translateY(25px);
-    border-radius: 50%;
-    border: 4px solid var(--mint);
-    cursor: pointer;
-    padding: 0;
-    box-sizing: border-box;
-    
-  }
+  width: 120px;
+  height: 120px;
+  overflow: hidden;
+  transition: 0.25s;
+  margin: 0 auto;
+  transform: translateY(25px);
+  border-radius: 50%;
+  border: 4px solid var(--mint);
+  cursor: pointer;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .card__img:hover {
-    width: 100%;
-    height: 100%;
-    border-radius: unset;
-    border: unset;
-    transform: unset;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border-radius: unset;
+  border: unset;
+  transform: unset;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-  
+
 #avatar {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .profile__name {
-    margin-top: 10px !important;
-    color: var(--black);
-    padding: 40px 10px 0;
-    box-sizing: border-box;
-    &:hover{
-        color: var(--mint)
-    }
-}
-  
-#mssv {
+  margin-top: 10px !important;
+  color: var(--black);
+  padding: 40px 10px 0;
+  box-sizing: border-box;
+  &:hover {
     color: var(--mint);
-    box-sizing: border-box;
-    font-family: var(--body-font);
-    font-size: var(--h1-font-size);
+  }
+}
+
+#mssv {
+  color: var(--mint);
+  box-sizing: border-box;
+  font-family: var(--body-font);
+  font-size: var(--h1-font-size);
 }
 
 .card__social a {
-    text-decoration: none;
-    color:var(--gray);
-    margin: 25px 20px 40px;
-    display: inline-block;
-    font-size: 50px;
-    transition: 0.25s;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .card__social a:hover {
-    color: var(--mint);
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
+  text-decoration: none;
+  color: var(--gray);
+  margin: 25px 20px 40px;
+  display: inline-block;
+  font-size: 50px;
+  transition: 0.25s;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.card__social a:hover {
+  color: var(--mint);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .btn__contact__me {
-    width: 50%;
-    align-self: center;
-    color: var(--mint);
-    background-color: transparent;
-    border: 1px solid var(--mint);
-    border-radius: inherit;
-    cursor: pointer;
-    transition: 0.25s;
-    margin: 0;
-    box-sizing: border-box;
-  }
+  width: 50%;
+  align-self: center;
+  color: var(--mint);
+  background-color: transparent;
+  border: 1px solid var(--mint);
+  border-radius: inherit;
+  cursor: pointer;
+  transition: 0.25s;
+  margin: 0;
+  box-sizing: border-box;
+}
 .btn__contact__me:hover {
-    background-color: var(--mint);
-    margin: 0;
-    padding: 0;
-    color:var(--white); 
-    box-sizing: border-box;
+  background-color: var(--mint);
+  margin: 0;
+  padding: 0;
+  color: var(--white);
+  box-sizing: border-box;
 }
 
-.profile{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    box-sizing: border-box;
+.profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  box-sizing: border-box;
 }
-.footer{
-    border-radius: 10px;
-    border-top: 1px solid var(--mint);
-    text-align: justify;
-    height: 300px;
-    width: 100%;
-    
-    &__logo{
-        margin: 20px 270px;
-        display: inline;
-    img{
-        max-width: 100px;
-        margin: 10px;
-    }
-    
-}}
-.vl {
-    align-items:center;
+.footer {
+  border-radius: 10px;
+  border-top: 1px solid var(--mint);
+  text-align: justify;
+  height: 300px;
+  width: 100%;
+
+  &__logo {
+    margin: 20px 270px;
     display: inline;
-    border-left: 4px solid var(--gray);
-    height: 100px;
-    position:absolute;
-    margin-left: 20px;
-    margin-top: 15px;
-    color: var(--mint);
-    padding: 20px;
-    vertical-align: middle;
-    font-family: var(--body-font);
-    font-size: 130%;
-    font-weight: 600;
+    img {
+      max-width: 100px;
+      margin: 10px;
+    }
   }
-
+}
+.vl {
+  align-items: center;
+  display: inline;
+  border-left: 4px solid var(--gray);
+  height: 100px;
+  position: absolute;
+  margin-left: 20px;
+  margin-top: 15px;
+  color: var(--mint);
+  padding: 20px;
+  vertical-align: middle;
+  font-family: var(--body-font);
+  font-size: 130%;
+  font-weight: 600;
+}
