--- a/clients/src/components/common/browseLibrary/BrowseLibrary.scss
+++ b/clients/src/components/common/browseLibrary/BrowseLibrary.scss
@@ -23,6 +23,10 @@
                     box-shadow: none !important;
                     margin-right: $gap;
                 }
+
+                button {
+                    margin: $gap 0;
+                }
             }
         }
     }
