--- a/clients/src/components/contestManagement/contestInfo/ContestInfo.scss
+++ b/clients/src/components/contestManagement/contestInfo/ContestInfo.scss
@@ -75,7 +75,7 @@ $panel-contest-info-width: 300px;
                     padding-left: 0 !important;
 
                     .card-test-index {
-                        background-color: #b8ecb8;
+                        background-color: #7af3d5;
                         display: flex;
                         align-items: center;
                         justify-content: center;
