handle cookies based on authenticated status

--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -19,6 +19,8 @@ $bg-color: #ebecf0;
 $app-bg-color: rgb(255, 255, 255);
 $theme-color: hsla(87, 90%, 34%, 1);
 $border-color: $theme-color;
+$logo-font: "Nunito", sans-serif;
+$body-font: "Source Sans Pro", sans-serif;
 
 .remove-bootstrap-outline {
   textarea:focus,
