--- a/clients/src/App.scss
+++ b/clients/src/App.scss
@@ -4,8 +4,7 @@ input,
 textarea,
 button,
 body {
-  margin: 0;
-  font-family: --body-font;
+  font-family: $body-font;
   font-size: 14px;
   line-height: 1.3em;
 }
