add loading animation

--- a/clients/src/components/contest/contestInfo/ContestInfo.scss
+++ b/clients/src/components/contest/contestInfo/ContestInfo.scss
@@ -19,6 +19,10 @@ $panel-contest-info-width: 300px;
         }
     }
 
+    .loading {
+        height: 75vh;
+    }
+
     .container-section {
         display: flex;
         flex-direction: row;
