--- a/clients/src/components/MultiChoices/answer/Answer.scss
+++ b/clients/src/components/MultiChoices/answer/Answer.scss
@@ -1,7 +1,7 @@
 @import '_setting.scss';
 
 $answer-button-width: 50%;
-$answer-background-color: white;
+$answer-background-color: #82dfb5;
 $btn-check-size: 2rem;
 
 .question-answers {
