--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -13,7 +13,7 @@ $gap: 10px;
 $quick-action-height: 5vh;
 $panel-left-width: 16vw;
 $panel-center-width: 86vw;
-$navbar-height: 10vh;
+$navbar-height: 60px;
 $box-shadow: rgba(255, 255, 255, 0.25) 0px -4px inset;
 $bg-color: #ebecf0;
 $app-bg-color: rgb(255, 255, 255);
@@ -60,7 +60,6 @@ $body-font: "Source Sans Pro", sans-serif;
   --black: hsla(0, 0%, 0%, 1);
   --container-color: #fff;
   --gray: rgb(119, 119, 119);
-  --white: #ffffff;
   --light-mint: rgba(209, 255, 134, 0.92);
 
   // === FONT WEIGHT
@@ -87,7 +86,7 @@ $body-font: "Source Sans Pro", sans-serif;
   --z-fixed: 100;
 
   //navbar height
-  --navbar-height: 75px;
+  --navbar-height: 60px;
 }
 
 ul {
@@ -110,9 +109,16 @@ html {
 }
 
 /*=============== SCROLL BAR ===============*/
-/* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  -webkit-appearance: none;
+}
+
+/* size */
+::-webkit-scrollbar:vertical {
+  width: $gap;
+}
+::-webkit-scrollbar:horizontal {
+  height: $gap;
 }
 
 /* Track */
@@ -122,11 +128,11 @@ html {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: lightgray;
+  border-radius: $gap;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--mint);
-  border-radius: 2px;
+  background-color: lighten($color: $theme-color, $amount: 5);
 }
