--- a/clients/src/components/common/login/Login.scss
+++ b/clients/src/components/common/login/Login.scss
@@ -46,7 +46,7 @@ input{
     border-radius: 50px;
     border: 1px solid var(--mint);
     color: var(--mint);
-    background-color: var(--white);
+    background-color: white;
     font-weight:700;
     ::placeholder{
         border: 1px solid var(--mint);
@@ -69,7 +69,7 @@ input{
         border: 1px solid var(--mint);
         max-width: 150px;
         border-radius: 50px;
-        color: var(--white);
+        color: white;
         background-color: var(--mint);
         padding: 5px 0;
         font-weight: 600;       
