--- a/clients/src/components/MultiChoices/question/Question.scss
+++ b/clients/src/components/MultiChoices/question/Question.scss
@@ -22,7 +22,7 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         line-height: 1.2rem;
         display: flex;
         flex-direction: row;
-    
+
         .lenght-limit {
             color: gray;
             padding-right: $gap;
@@ -32,13 +32,13 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
             font-weight: normal;
             vertical-align: middle;
         }
-    
+
         .question-content {
             width: 100%;
             display: flex;
             flex-direction: column;
             margin-left: $gap*3;
-    
+
             .textarea-enter {
                 font-size: 18px;
                 font-weight: bold;
@@ -47,7 +47,7 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
             }
         }
     }
-    
+
     .embeded {
         margin: $gap;
         height: 46vh;
@@ -65,9 +65,22 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
             width: 40px;
         }
     }
-    
+
     .question-answers {
         height: 28vh;
+        max-height: 28vh;
         padding: 0 1vw 0 1vw;
+    }
+
+    .empty-answer {
+        height: 100%;
+        max-height: 28vh;
+
+        .decor {
+            height: 90%;
+            width: 100%;
+            border: 2px dashed $theme-color;
+            margin: $gap;
+        }
     }
 }
