fix create question and answer

--- a/clients/src/components/MultiChoices/question/Question.scss
+++ b/clients/src/components/MultiChoices/question/Question.scss
@@ -80,6 +80,7 @@ $question-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
             height: 90%;
             width: 100%;
             border: 2px dashed $theme-color;
+            border-radius: $gap;
             margin: $gap;
         }
     }
