--- a/clients/src/components/common/navbar/Navbar.scss
+++ b/clients/src/components/common/navbar/Navbar.scss
@@ -6,8 +6,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(208, 240, 224, 0.514);
-    padding: 10px 5% 10px !important;
+    background-color: rgb(255, 255, 255);
+    padding: 0px 0 10px !important;
     transition: .4s;
     position: fixed;
     width: 100%;
