--- a/clients/src/_setting.scss
+++ b/clients/src/_setting.scss
@@ -18,6 +18,7 @@ $box-shadow: rgba(255, 255, 255, 0.25) 0px -4px inset;
 $bg-color: #ebecf0;
 $app-bg-color: rgb(255, 255, 255);
 $theme-color: hsla(87, 90%, 34%, 1);
+$light-theme-color:rgba(209, 255, 134, 0.92);
 $border-color: $theme-color;
 $logo-font: "Nunito", sans-serif;
 $body-font: "Source Sans Pro", sans-serif;
