init dashboard overview

--- a/clients/src/components/admin/AppNavbar/AppNavbar.scss
+++ b/clients/src/components/admin/AppNavbar/AppNavbar.scss
@@ -3,5 +3,11 @@
 .navbar-admin {
     nav {
         height: 50px;
+
+        .right-nav {
+            button {
+                margin-right: $gap;
+            }
+        }
     }
 }
